--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,13 @@
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
+address {
+  font-style: normal;
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -27,15 +32,28 @@ body {
   overflow: hidden;
 }
 
+.link {
+  text-decoration: none;
+}
+
 .list {
   list-style: none;
 }
+
 /* Logo */
-.logo-header span {
+
+.logo {
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+}
+
+.logo-accent {
   color: var(--accent-color);
 }
 
-.logo-header {
+.logo.primary {
   color: var(--logo-header-color);
 }
 
@@ -43,6 +61,10 @@ body {
 
 .site-nav .link {
   color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
@@ -50,7 +72,7 @@ body {
   color: var(--accent-color);
 }
 
-.link.current {
+.site-nav .link.current {
   color: var(--accent-color);
 }
 
@@ -58,6 +80,10 @@ body {
 
 .address-nav .link {
   color: var(--secondary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .address-nav .link:hover,
@@ -70,8 +96,15 @@ body {
 .hero {
   background-color: var(--secondary-background-color);
 }
+
 .hero-title {
   color: var(--primary-white-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  text-align: center;
 }
 
 /* Button */
@@ -89,12 +122,8 @@ body {
 
 /* Logo footer */
 
-.logo-footer {
+.logo.secondary {
   color: var(--primary-white-color);
-}
-
-.logo-footer span {
-  color: var(--accent-color);
 }
 
 /* Contacts list */
@@ -102,11 +131,14 @@ body {
 .contacts {
   background-color: var(--secondary-background-color);
 }
-.contacts-map {
+
+.footer-address .contacts-map {
   color: var(--primary-white-color);
+  
 }
 
-.footer-address .link {
+.footer-address .email,
+.footer-address .phone {
   color: var(--logo-footer-color);
 }
 
