--- a/css/styles.css
+++ b/css/styles.css
@@ -5,8 +5,9 @@
   --primary-white-color: #ffffff;
   --logo-header-color: #000000;
   --logo-footer-color: rgba(255, 255, 255, 0.6);
-  --secondary-background-color: #2f303a;
-  --category-button-background-color :#f5f4fa; 
+  --header-border-color: #ececec;
+  --background-color: #2f303a;
+  --secondary-background-color: #f5f4fa;
 }
 
 body {
@@ -20,6 +21,49 @@ body {
 address {
   font-style: normal;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.section {
+  padding: 94px 0;
+}
+
+.section-title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.section-text {
+  color: var(--secondary-text-color);
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -42,12 +86,21 @@ address {
   list-style: none;
 }
 
-.section-text {
-  color: var(--secondary-text-color);
+/* Header */
 
-  line-height: 1.71;
+.header .container {
+  display: flex;
+  align-items: center;
+}
+.header {
+  padding: 25px 0;
+  border-bottom: 1px solid var(--header-border-color);
 }
 
+.navigation {
+  display: flex;
+  align-items: center;
+}
 
 /* Logo */
 
@@ -56,6 +109,9 @@ address {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
+}
+.header .logo {
+  margin-right: 93px;
 }
 
 .logo-accent {
@@ -67,6 +123,11 @@ address {
 }
 
 /* Site nav */
+
+.site-nav {
+  display: flex;
+  align-items: center;
+}
 
 .site-nav .link {
   color: var(--primary-text-color);
@@ -86,7 +147,18 @@ address {
   color: var(--accent-color);
 }
 
+.site-nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 /* Address nav */
+
+.header-address {
+  margin-left: auto;
+}
+.address-nav {
+  display: flex;
+}
 
 .address-nav .link {
   color: var(--secondary-text-color);
@@ -102,10 +174,17 @@ address {
   color: var(--accent-color);
 }
 
+.address-nav-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 /* Hero */
 
 .hero {
-  background-color: var(--secondary-background-color);
+  background-color: var(--background-color);
+  padding-top: 200px;
+  padding-bottom: 280px;
+  text-align: center;
 }
 
 .hero-title {
@@ -113,10 +192,12 @@ address {
 
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.36
+  line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  text-align: center;
+  min-height: 120px;
+  padding: 0 450px;
+  margin-bottom: 30px;
 }
 
 /* Button */
@@ -124,38 +205,103 @@ address {
 .button {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
+  border-width: 0;
+  border-radius: 4px;
+  padding: 10px 32px;
 }
 
-/* Team */
+/* Advantages */
+
+.advatnages {
+  display: flex;
+  padding-bottom: 94px;
+}
+
+.advantages-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.advantages-item .section-text {
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.advantages-item-title {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+/* Gallery */
+
+.gallery {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* Our Team */
+
+.team {
+  background-color: var(--secondary-background-color);
+}
+
+.team-members {
+  display: flex;
+}
+
+.team-item {
+  margin-right: 30px;
+}
+.team.item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.team-item-info {
+  background-color: var(--primary-white-color);
+  border-radius: 0px 0px 4px 4px;
+  padding: 30px 60px;
+  text-align: center;
+}
 
 .team-name {
+  font-size: 15px;
   font-weight: 500;
   line-height: 1.19;
+  margin-bottom: 10px;
 }
 
 .section-text.position {
   line-height: 1.19;
 }
 
-
 /* Logo footer */
 
 .logo.secondary {
+  display: inline-block;
   color: var(--primary-white-color);
+  margin-bottom: 20px;
 }
 
 /* Contacts list */
 
 .contacts {
-  background-color: var(--secondary-background-color);
+  background-color: var(--background-color);
+  padding: 60px 0;
 }
-.footer-address{
+
+.footer-address {
   font-size: 14px;
-  line-height:1.71;
+  line-height: 1.71;
 }
+
+.footer-address-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
 .footer-address .contacts-map {
   color: var(--primary-white-color);
-  
 }
 
 .footer-address .email,
@@ -163,14 +309,28 @@ address {
   color: var(--logo-footer-color);
 }
 
-
-/* Portfolio */
+/* Portfolio page */
 
 /* Category button */
 
+.categories {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
 .category-button {
   color: var(--primary-text-color);
-  background-color: var(--category-button-background-color);
+  background-color: var(--secondary-background-color);
+  font-size: 16px;
+  font-weight: 500px;
+  padding: 6px 22px;
+  border: none;
+  border-radius: 4px;
+}
+
+.categories-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .category-button:hover,
@@ -180,7 +340,33 @@ address {
 }
 
 /* Projects */
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+.projects-item {
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
 
+.projects-item:nth-child(3n + 3) {
+  margin-right: 0px;
+}
+
+.projects-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.projects-item-link {
+  display: block;
+}
+
+.card-content {
+  padding: 20px 24px;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+}
 .projects-title {
   color: var(--primary-text-color);
 
@@ -196,8 +382,6 @@ address {
   font-size: 16px;
   line-height: 1.88;
 }
-
-
 
 /* цвет основного текста #212121 */
 
